buildscript {
  repositories {
    jcenter()
  }
  dependencies {
    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
  }
}

plugins {
  id 'application'
  id 'checkstyle'
  id 'uk.gov.hmcts.java' version '0.12.0'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
  id 'org.springframework.boot' version '2.5.3'
  id 'org.owasp.dependencycheck' version '6.4.1.1'
  id 'com.github.ben-manes.versions' version '0.36.0'
  id "info.solidsoft.pitest" version '1.6.0'
  id 'org.sonarqube' version '3.1.1'
  id 'com.gorylenko.gradle-git-properties' version '2.2.2'
  id "io.freefair.lombok" version "5.3.0"
  id 'org.flywaydb.flyway' version '7.5.0'
}

apply plugin: "com.gorylenko.gradle-git-properties"
apply plugin: 'net.serenity-bdd.aggregator'
apply plugin: "info.solidsoft.pitest"
apply plugin: "org.owasp.dependencycheck"

group = 'uk.gov.hmcts.reform'
version = '0.1.0'

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

gitProperties {
  gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/pcqbackend/gitcommit")
  keys = ['git.commit.id','git.commit.time']
  dateFormat = "yyyy-MM-dd'T'HH:mmZ"
  dateFormatTimeZone = "GMT"
}

sourceSets {

  test {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/test/java')
    }
    resources.srcDir file('src/test/resources')
  }

  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

configurations {
  integrationTestImplementation.extendsFrom testImplementation
  integrationTestRuntime.extendsFrom testRuntime
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestRuntime.extendsFrom testRuntime
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

task unit(type: Test, description: 'Runs the unit tests.', group: 'Verification') {
  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath
  useJUnitPlatform()
}

task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {

  systemProperty "scenario", System.getProperty('scenario')

  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  finalizedBy aggregate
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  //useJUnitPlatform()
  // set your environment variables here
  // environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
}

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

task fortifyScan(type: JavaExec)  {
  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '8.29'
  // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
  configDirectory = new File(rootDir, 'config/checkstyle')
}

pmd {
  toolVersion = "6.28.0"
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.enabled = true
    csv.enabled = false
    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

pitest {
  pitestVersion.set('1.4.11')
  junit5PluginVersion.set('0.12')
  targetClasses = ['uk.gov.hmcts.reform.pcqbackend.*']
  excludedClasses = [
    'uk.gov.hmcts.reform.pcqbackend.utils.*'
  ]
  threads = 10
  enableDefaultIncrementalAnalysis = true
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  mutationThreshold = 50
  timeoutConstInMillis = 30000
  mutators.set([
    'CONDITIONALS_BOUNDARY',
    'INCREMENTS',
    'INVERT_NEGS',
    'MATH',
    'NEGATE_CONDITIONALS',
    'VOID_METHOD_CALLS',
    'EMPTY_RETURNS',
    'FALSE_RETURNS',
    'NULL_RETURNS',
    'PRIMITIVE_RETURNS',
    'TRUE_RETURNS',
    'REMOVE_CONDITIONALS'
  ])
}


project.tasks['pitest'].group = "Verification"

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: pcq-backend"
    property "sonar.projectKey", "uk.gov.hmcts.reform:pcq-backend"
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
  }
}

dependencyUpdates.resolutionStrategy {
  componentSelection { rules ->
    rules.all {
      def isNonStable = { String version ->
        ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea'].any { qualifier ->
          version ==~ /(?i).*[.-]\$qualifier[.\\d-+]*/
        }
      }
      if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
        selection.reject('Release candidate')
      }
    }
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyManagement {
  dependencies {
    // CVE-2021-21290
    dependency group: 'com.azure', name: 'azure-core-http-netty', version: '1.8.0'
    dependencySet(group: 'io.netty', version: '4.1.69.Final') {
      entry 'netty-buffer'
      entry 'netty-codec'
      entry 'netty-codec-http'
      entry 'netty-codec-http2'
      entry 'netty-codec-socks'
      entry 'netty-common'
      entry 'netty-handler'
      entry 'netty-handler-proxy'
      entry 'netty-resolver'
      entry 'netty-transport'
      entry 'netty-transport-native-epoll'
      entry 'netty-transport-native-kqueue'
      entry 'netty-transport-native-unix-common'
      entry 'netty-codec-dns'
      entry 'netty-resolver-dns'
      entry 'netty-resolver-dns-native-macos'
    }
    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
    // CVE-2018-10237 - Unbounded memory allocation
    // CVE-2020-8908 - Temp directory creation vulnerability
    dependencySet(group: 'com.google.guava', version: '30.1-jre') {
      entry 'guava'
    }
    // force junit5 deps to use groovy v3 which fixes reflective call errors for java 11
    // rest assured 4.2 -> 4.3 jumps to groovy v3. junit v5.6 still on v2.5
    dependencySet(group: 'org.codehaus.groovy', version: '3.0.7') {
      entry 'groovy'
      entry 'groovy-json'
      entry 'groovy-xml'
    }
    // CVE-2021-29425
    dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'

    dependencySet(group: 'org.springframework.cloud', version: '3.0.5') {
      entry 'spring-cloud-starter-openfeign'
      entry 'spring-cloud-openfeign-core'
    }
  }
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  jcenter()
  maven {
    url 'https://jitpack.io'
  }
}

def versions = [
  junit               : '5.7.0',
  junitPlatform       : '1.7.1',
  reformLogging       : '5.1.1',
  springBoot          : springBoot.class.package.implementationVersion,
  springfoxSwagger    : '3.0.0',
  springfoxSwaggerui  : '2.9.2',
  restAssured         : '4.2.0',
  serenity            : '2.4.24',
  lombok              : '1.18.12',
  gradlePitest        : '1.6.0',
  pitest              : '1.6.3',
  sonarPitest         : '0.5',
  serviceAuthVersion  : '4.0.0',
  testcontainers      : '1.15.1',
  springFramework     : '5.3.12'
]

configurations.all {
  resolutionStrategy {
    eachDependency { DependencyResolveDetails details ->
      if (details.requested.group in ['org.apache.logging.log4j']) {
        details.useVersion '2.13.2'
      }
      if (details.requested.group in ['org.scala-lang']) {
        details.useVersion '2.12.10'
      }
      if (details.requested.group in ['org.apache.tomcat.embed']) {
        details.useVersion '9.0.54'
      }
      if (details.requested.group in ['org.hibernate']) {
        details.useVersion '5.4.25.Final'
      }
      if (details.requested.group in ['org.apache.httpcomponents.httpclient']) {
        details.useVersion '4.5.13'
      }
    }
  }
}

dependencies {
  // exclude spring-cloud-context as it is already included in spring-cloud-starter-netflix-hystrix
  def withoutSpringCloudContext = {
    exclude group: 'org.springframework.cloud', module: 'spring-cloud-context'
  }

  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'

  implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-aspects', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-expression', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-jcl', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-jdbc', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-orm', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-tx', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
  implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework

  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'

  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'

  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
  implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion) {
    force = true
  }

  implementation group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.5'
  implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.10.0'

  implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'

  implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0', withoutSpringCloudContext

  implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.6.0'
  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwaggerui

  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging

  implementation group: "com.networknt", name: "json-schema-validator", version: "1.0.49"
  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  implementation group: "io.jsonwebtoken", name: "jjwt", version: "0.9.1"
  implementation group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"

  testImplementation group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit

  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
  testImplementation group: 'org.springframework.security', name: 'spring-security-test'

  testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.19.0'

  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'

  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity

  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
  testImplementation group: 'io.rest-assured', name: 'rest-assured-common', version: versions.restAssured
  testImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
  testImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured

  testImplementation group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
  testImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers

  testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'

  integrationTestImplementation group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
  integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath
  functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured-common', version: versions.restAssured
  smokeTestImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
  smokeTestImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath
}

test {
  useJUnitPlatform()
  failFast = true
}

flyway {
  url = System.getenv('FLYWAY_URL')
  user = System.getenv('FLYWAY_USER')
  password = System.getenv('FLYWAY_PASSWORD')
  baselineOnMigrate = true
  baselineVersion = '000'
}

import org.flywaydb.gradle.task.FlywayMigrateTask

task migratePostgresDatabase(type: FlywayMigrateTask) {
  baselineOnMigrate = true
  if (project.hasProperty("dburl")) {
    url = "jdbc:postgresql://${dburl}"
  }
}

mainClassName = 'uk.gov.hmcts.reform.pcqbackend.Application'

bootJar {
  archiveName = 'pcq-backend.jar'

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}
